# janusgui

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Sidebar.tsx  TitleBar.tsx
src/main/: index.ts
src/preload/: index.ts
src/renderer/src/: App.tsx  index.css
src/renderer/src/components/: Sidebar.tsx  TitleBar.tsx
src/renderer/src/views/: AboutView.tsx  HistoryView.tsx  SettingsView.tsx  SwapView.tsx
src/views/: AddressesView.tsx  SwapView.tsx
