[package]
name = "janus-swap"
version = "1.0.0"
description = "Janus Swap - Atomic Swap GUI"
authors = ["aesxsc"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
